--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,59 +1,50 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
 
-	<head>
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=5" />
 
-		<meta charset="utf-8">
+    <meta name="theme-color" content="{{ site.theme_color }}" />
+    <meta name="author" content="{{ site.author }}" />
+    <meta name="description" content="{{ page.description }}" />
 
-		<meta http-equiv="x-ua-compatible" content="ie=edge">
-		<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=5">
+    <meta name="google-site-verification" content="EwUGW1WlCkRIQuyQ9AE1-bLitWthw-eVMZFTAMZVZaA" />
 
-		<meta name="theme-color" content="{{ site.theme_color }}">
-		<meta name="author" content="{{ site.author }}">
-		<meta name="description" content="{{ page.description }}">
+    <title>{{ page.title }}</title>
 
-		<meta name="google-site-verification" content="EwUGW1WlCkRIQuyQ9AE1-bLitWthw-eVMZFTAMZVZaA">
+    <link rel="icon" type="image/gif" href="/{{ site.avatar }}?ver={{ site.cache_version }}" />
 
-		<title>{{ page.title }}</title>
+    <meta name="og:url" content="{{ site.domain }}{{ page.slug }}" />
+    <meta name="og:type" content="website" />
+    <meta name="og:title" content="{{ page.title }}" />
+    <meta name="og:description" content="{{ page.description }}" />
+    <meta name="og:image" content="{{ site.domain }}{{ site.avatar }}?ver={{ site.cache_version }}" />
 
-		<link rel="icon" type="image/gif" href="/{{ site.avatar }}?ver={{ site.cache_version }}">
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="{{ site.twitter }}" />
+    <meta name="twitter:title" content="{{ page.title }}" />
+    <meta name="twitter:description" content="{{ page.description }}" />
+    <meta name="twitter:image" content="{{ site.domain }}{{ site.avatar }}?ver={{ site.cache_version }}" />
 
-		<meta name="og:url" content="{{ site.domain }}{{ page.slug }}">
-		<meta name="og:type" content="website">
-		<meta name="og:title" content="{{ page.title }}">
-		<meta name="og:description" content="{{ page.description }}">
-		<meta name="og:image" content="{{ site.domain }}{{ site.avatar }}?ver={{ site.cache_version }}">
+    <link rel="manifest" href="/assets/manifest.json?ver={{ site.cache_version }}" />
 
-		<meta name="twitter:card" content="summary">
-		<meta name="twitter:site" content="{{ site.twitter }}">
-		<meta name="twitter:title" content="{{ page.title }}">
-		<meta name="twitter:description" content="{{ page.description }}">
-		<meta name="twitter:image" content="{{ site.domain }}{{ site.avatar }}?ver={{ site.cache_version }}">
+    <style>
+      {% include site.min.css %}
+      {% include highlight.min.css %}
+    </style>
+  </head>
 
-		<link rel="manifest" href="/assets/manifest.json?ver={{ site.cache_version }}">
+  <body>
+    {% include header.html %}
 
-		<style>
-			{% include site.min.css %}
-			{% include highlight.min.css %}
-		</style>
+    <article>
+      <h1>{{ page.title }}</h1>
 
-	</head>
+      {{ content }}
+    </article>
 
-	<body>
-
-		{% include header.html %}
-
-		<article>
-
-			<h1>{{ page.title }}</h1>
-
-			{{ content }}
-
-		</article>
-
-		{% include footer.html %}
-
-	</body>
-
+    {% include footer.html %}
+  </body>
 </html>
-
