--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,5 +6,6 @@
     <li><a href="//twitter.com/mitjafelicijan" target="_blank" rel="noopener">twitter</a></li>
     <li><a href="//plus.google.com/+MitjaFelicijan?rel=author" target="_blank" rel="noopener">google+</a></li>
     <li><a href="/curriculum-vitae">curriculum vitae</a></li>
+    <li><a href="/rules-for-developers">rules for developers</a></li>
   </ul>
 </nav>
