Added author and update on editor

--- a/_includes/site.css
+++ b/_includes/site.css
@@ -82,6 +82,11 @@ article img {
   display: block;
 }
 
+article img[src*='#center'] {
+  display: block;
+  margin: auto;
+}
+
 time {
   display: block;
   font-size: 85%;
@@ -190,6 +195,13 @@ ol li a {
   text-decoration: none;
 }
 
+/* footnotes */
+.footnotes p {
+  padding: 0;
+  display: inline-block;
+  margin: 0;
+}
+
 /* commenting */
 #hcb_form_name,
 #hcb_form_content {
@@ -238,6 +250,10 @@ ol li a {
 
   h1 {
     font-size: 200%;
+  }
+
+  .footnotes {
+    overflow: auto;
   }
 }
 
