--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,82 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
 
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=5" />
+<head>
+	<meta charset="utf-8" />
 
-    <meta name="theme-color" content="{{ site.theme_color }}" />
-    <meta name="author" content="{{ site.author }}" />
-    <meta name="description" content="{{ page.description }}" />
+	<meta http-equiv="x-ua-compatible" content="ie=edge" />
+	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=5" />
 
-    <meta name="google-site-verification" content="EwUGW1WlCkRIQuyQ9AE1-bLitWthw-eVMZFTAMZVZaA" />
+	<meta name="theme-color" content="{{ site.theme_color }}" />
+	<meta name="author" content="{{ site.author }}" />
+	<meta name="description" content="{{ page.description }}" />
 
-    <title>{{ page.title }}</title>
+	<meta name="google-site-verification" content="EwUGW1WlCkRIQuyQ9AE1-bLitWthw-eVMZFTAMZVZaA" />
 
-    <link rel="icon" type="image/gif" href="/{{ site.avatar }}?ver={{ site.cache_version }}" />
+	<title>{{ page.title }}</title>
 
-    <meta name="og:url" content="{{ site.domain }}{{ page.slug }}" />
-    <meta name="og:type" content="website" />
-    <meta name="og:title" content="{{ page.title }}" />
-    <meta name="og:description" content="{{ page.description }}" />
-    <meta name="og:image" content="{{ site.domain }}{{ site.avatar }}?ver={{ site.cache_version }}" />
+	<link rel="icon" type="image/gif" href="/{{ site.avatar }}?ver={{ site.cache_version }}" />
 
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="{{ site.twitter }}" />
-    <meta name="twitter:title" content="{{ page.title }}" />
-    <meta name="twitter:description" content="{{ page.description }}" />
-    <meta name="twitter:image" content="{{ site.domain }}{{ site.avatar }}?ver={{ site.cache_version }}" />
+	<meta name="og:url" content="{{ site.domain }}{{ page.slug }}" />
+	<meta name="og:type" content="website" />
+	<meta name="og:title" content="{{ page.title }}" />
+	<meta name="og:description" content="{{ page.description }}" />
+	<meta name="og:image" content="{{ site.domain }}{{ site.avatar }}?ver={{ site.cache_version }}" />
 
-    <link rel="manifest" href="/assets/manifest.json?ver={{ site.cache_version }}" />
+	<meta name="twitter:card" content="summary" />
+	<meta name="twitter:site" content="{{ site.twitter }}" />
+	<meta name="twitter:title" content="{{ page.title }}" />
+	<meta name="twitter:description" content="{{ page.description }}" />
+	<meta name="twitter:image" content="{{ site.domain }}{{ site.avatar }}?ver={{ site.cache_version }}" />
 
-    <style>
-      {% include site.min.css %}
-      {% include highlight.min.css %}
-    </style>
-  </head>
+	<link rel="manifest" href="/assets/manifest.json?ver={{ site.cache_version }}" />
 
-  <body>
-    {% include header.html %}
+	<style>
+		{% include site.min.css %}
+    {% include highlight.min.css %}
+  </style>
+</head>
 
-    <article>
-      <h1>{{ page.title }}</h1>
+<body>
+	{% include header.html %}
 
-      <time datetime="{{ page.date | date: '%Y-%m-%d' }}">{{ page.date | date: '%A, %B %-d, %Y' }}</time>
+	<article>
 
-      {{ content }}
+		<h1>{{ page.title }}</h1>
 
-      <!--
-        <div id="HCB_comment_box" class="comments">Loading comments ...</div>
-        <script type="text/javascript" id="hcb">
-        	if (!window.hcb_user) {
-        		hcb_user = {
-        			logout_link: "logout",
-        			admin_link: "admin",
-        			reply: "reply",
-        			flag: "flag",
-        			like: "like",
-        			prev_page: "prev",
-        			next_page: "next",
-        		};
-        	}
-        	hcb_user.PAGE = "{{ site.domain }}";
-        	(function() {
-        		var s = document.createElement("script"),
-        			l = hcb_user.PAGE || ("" + window.location).replace(/'/g, "%27"),
-        			h = "//www.htmlcommentbox.com";
-        		s.setAttribute("type", "text/javascript");
-        		s.setAttribute("src", h + "/jread?page=" + encodeURIComponent(l).replace("+", "%2B") + "&mod=%241%24wq1rdBcg%24MpQDCL74rJm9DREvceKL%2F1" + "&opts=16399&num=10&ts=1490664489345");
-        		if (typeof s != "undefined") document.getElementsByTagName("head")[0].appendChild(s);
-        	})();
-        </script>
-      -->
-    </article>
+		<time datetime="{{ page.date | date: '%Y-%m-%d' }}">{{ page.date | date: '%A, %B %-d, %Y' }}, by {{ site.author }}</time>
 
-    {% include footer.html %}
+		{{ content }}
 
-    <!-- Linked data - Article -->
-    <script type="application/ld+json">
+	</article>
+
+	{% include footer.html %}
+
+	<!-- Linked data - Article -->
+	<script type="application/ld+json">
       {
       	"@context": "http://schema.org",
       	"@type": "NewsArticle",
@@ -106,5 +83,6 @@
       	"description": "{{ page.description }}"
       }
     </script>
-  </body>
+</body>
+
 </html>
