--- a/source/layouts/navigation.njk
+++ b/source/layouts/navigation.njk
@@ -1,6 +1,6 @@
 <menu>
   <div>
-    <a href="/" class="logo">mitja felicijan</a>
+    <a href="/" class="logo">@mitjafelicijan</a>
   </div>
   <nav>
     <a href="//github.com/mitjafelicijan">
