--- a/source/layouts/post.njk
+++ b/source/layouts/post.njk
@@ -9,6 +9,8 @@
 
   <meta name="google-site-verification" content="EwUGW1WlCkRIQuyQ9AE1-bLitWthw-eVMZFTAMZVZaA">
 
+  <link rel="icon" type="image/png" href="{{ vars.domain }}/files/avatar-64x64.png?ver={{ timestamp }}">
+
   <title>{{ title }}</title>
   <meta name="author" content="{{ vars.author }}">
   <meta name="description" content="{{ description }}">
@@ -17,13 +19,13 @@
   <meta name="og:type" content="website">
   <meta name="og:title" content="{{ title }}">
   <meta name="og:description" content="{{ description }}">
-  <meta name="og:image" content="{{ vars.domain }}/assets/avatar.gif?ver={{ timestamp }}">
+  <meta name="og:image" content="{{ vars.domain }}/files/avatar-512x512.png?ver={{ timestamp }}">
 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:site" content="@mitjafelicijan">
   <meta name="twitter:title" content="{{ title }}">
   <meta name="twitter:description" content="{{ description }}">
-  <meta name="twitter:image" content="{{ vars.domain }}/assets/avatar.gif?ver={{ timestamp }}">
+  <meta name="twitter:image" content="{{ vars.domain }}/files/avatar-512x512.png?ver={{ timestamp }}">
 
   {{ css }}
 
