--- a/source/layouts/navigation.njk
+++ b/source/layouts/navigation.njk
@@ -1,9 +1,9 @@
 <menu>
   <div>
-    <a href="/" class="logo">@mitjafelicijan</a>
+    <a href="/" class="logo">Mitja Felicijan</a>
   </div>
   <nav>
-    <a href="//github.com/mitjafelicijan">
+    <a href="//github.com/mitjafelicijan" aria-label="Github">
       <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
         viewBox="0 0 92 92" style="enable-background:new 0 0 92 92;" xml:space="preserve">
         <g>
@@ -21,7 +21,7 @@
       </svg>
     </a>
 
-    <a href="//twitter.com/mitjafelicijan">
+    <a href="//twitter.com/mitjafelicijan" aria-label="Twitter">
       <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
         viewBox="0 0 612 612" style="enable-background:new 0 0 612 612;" xml:space="preserve">
         <g>
