--- a/site.tmpl
+++ b/site.tmpl
@@ -8,13 +8,14 @@
     <meta name="google-site-verification" content="{{ html .Site.Other.Google_verification }}">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name=description content="{{ html .Site.Other.Description }}">
-    
+
     <meta name="author" content="{{ html .Site.Other.Author }}">
     <link rel="alternate" type="application/atom+xml" title="{{ html .Site.Other.Title }} feed" href="{{ .Rel "feed.atom" }}">
     <title>{{ .Site.Other.Title }}{{ if .Title }}: {{ .Title }}{{ end }}</title>
     <link rel="stylesheet" type="text/css" href="{{ .Rel "static/style.css" }}">
 
     <link rel="icon" type="image/png" href="{{ .Rel "static/avatar-64x64.png" }}">
+
   </head>
   <body>
   <main>
@@ -30,7 +31,7 @@
 {{ define "navigation" }}
   <nav>
     <a href="/">{{ html .Site.Other.Author }}</a>
-    <a href="/curriculum-vitae">Curriculum Vitae</a>
+    <a href="/curriculum-vitae.html">Curriculum Vitae</a>
     <a href="https://twitter.com/mitjafelicijan" target="_blank" rel="noopener nofollow">Twitter</a>
     <a href="https://github.com/mitjafelicijan" target="_blank" rel="noopener nofollow">Github</a>
   </nav>
@@ -50,6 +51,7 @@
   {{ template "header" . }}
   {{ template "navigation" . }}
   {{ .Content }}
+  {{ template "prism" . }}
   {{ template "mathjax" . }}
   {{ template "footer" . }}
 {{ end }}
@@ -92,4 +94,10 @@
     gtag('js', new Date());
     gtag('config', 'UA-12769079-10');
   </script>
+{{ end }}
+
+{{ define "prism" }}
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.17.1/themes/prism-solarizedlight.min.css" rel="stylesheet">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.17.1/components/prism-core.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.17.1/plugins/autoloader/prism-autoloader.min.js"></script>
 {{ end }}
