--- a/src/static/style.css
+++ b/src/static/style.css
@@ -78,6 +78,10 @@ th, td {
     color: #000;
 }
 
+code[class*=language-] {
+    font-size: 14px !important;
+}
+
 @media only screen and (max-width:480px) {
     nav {
         text-align: center;
