--- a/src/static/style.css
+++ b/src/static/style.css
@@ -83,6 +83,10 @@ code[class*=language-] {
 }
 
 @media only screen and (max-width:480px) {
+    main {
+        padding: 20px;
+    }
+
     nav {
         text-align: center;
         margin-bottom: initial;
