--- a/src/static/style.css
+++ b/src/static/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 main {
-    max-width: 680px;
+    max-width: 660px;
     padding: 20px 30px;
 }
 
@@ -66,6 +66,12 @@ table, th, td {
 
 th, td {
     padding: 5px 10px;
+}
+
+p.modified {
+    font-style: oblique;
+    font-size: 90%;
+    margin-top: 50px;
 }
 
 ::selection {
