--- a/site.tmpl
+++ b/site.tmpl
@@ -12,8 +12,8 @@
     <link rel="preconnect" href="https://www.google-analytics.com">
 
     <link rel="alternate" type="application/atom+xml" title="{{ html .Site.Other.Title }} feed" href="{{ .Rel "feed.atom" }}">
-    <link rel="stylesheet" type="text/css" href="{{ .Rel "static/style.css" }}">
-    <link rel="icon" type="image/png" href="{{ .Rel "static/avatar-64x64.png" }}">
+    <link rel="stylesheet" type="text/css" href="{{ .Rel "static/style.css" }}?v={{ .ModTime.Format "20060102150405" }}">
+    <link rel="icon" type="image/png" href="{{ .Rel "static/avatar-64x64.png" }}?v={{ .ModTime.Format "20060102150405" }}">
 
     <title>{{ if .Title }}{{ .Title }} - {{ end }}{{ .Site.Other.Title }}</title>
     <meta name="author" content="{{ html .Site.Other.Author }}">
@@ -57,7 +57,7 @@
 {{end}}
 
 {{define "modified"}}
-  <p class="modified">Modified on {{ .ModTime }}</p>
+  <p class="modified">Modified on {{ .ModTime.Format "2006-01-02T15:04:05" }}</p>
 {{end}}
 
 {{ define "page" }}
@@ -111,7 +111,6 @@
 {{ end }}
 
 {{ define "prism" }}
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.17.1/themes/prism-solarizedlight.min.css" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.17.1/components/prism-core.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.17.1/plugins/autoloader/prism-autoloader.min.js"></script>
 {{ end }}
