Renamed Curriculum Vitae to CV

--- a/site.tmpl
+++ b/site.tmpl
@@ -40,7 +40,7 @@
 {{ define "navigation" }}
   <nav>
     <a href="/">{{ html .Site.Other.Author }}</a>
-    <a href="/curriculum-vitae.html">Curriculum Vitae</a>
+    <a href="/curriculum-vitae.html">CV</a>
     <a href="https://twitter.com/mitjafelicijan" target="_blank" rel="noopener nofollow">Twitter</a>
     <a href="https://github.com/mitjafelicijan" target="_blank" rel="noopener nofollow">Github</a>
   </nav>
