--- a/site.tmpl
+++ b/site.tmpl
@@ -72,15 +72,22 @@
   <article>
     <header>
       <h1>{{ .Title }}</h1>
+      {{ if eq .Other.Type "post" }}
       <div class="info">
-        {{ template "date" .Date }}
-        {{ template "author" . }}
-      </div>
+          {{ template "date" .Date }}
+          {{ template "author" . }}
+        </div>
+      {{ end }}
     </header>
     <section>
     {{ .Content }}
     </section>
   </article>
+
+  {{ if eq .Other.Type "post" }}
+    {{ template "comments" . }}
+  {{ end }}
+
   {{ template "modified" . }}
 {{ end }}
 
@@ -112,4 +119,20 @@
 {{ define "prism" }}
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.17.1/components/prism-core.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.17.1/plugins/autoloader/prism-autoloader.min.js"></script>
+{{ end }}
+
+{{ define "comments" }}
+  <div class="comments">
+    <h3>Comments</h3>
+    <div class="form">
+      <div><input id="name" placeholder="Your name" maxlength="20"></div>
+      <div><textarea id="comment" placeholder="Your comment" maxlength="500"></textarea></div>
+      <div><button id="submit">Post a comment</button></div>
+    </div>
+    <ul></ul>
+  </div>
+
+  <script src="https://www.gstatic.com/firebasejs/7.2.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.2.1/firebase-database.js"></script>
+  <script src="{{ .Rel "static/comments.js" }}?v={{ .ModTime.Format "20060102150405" }}" async></script>
 {{ end }}
