--- a/src/static/style.css
+++ b/src/static/style.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
     line-height: 150%;
     margin-bottom: 100px;
@@ -39,13 +43,18 @@ img {
 }
 
 ul.article-list li {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
+}
+
+ul.article-list li div {
+  display: flex;
 }
 
 ul.article-list time {
-    display: inline-block;
-    min-width: 120px;
+  display: inline-block;
+  min-width: 130px;
 }
+
 
 article .info {
     font-style: oblique;
@@ -82,6 +91,31 @@ p.modified {
 ::-moz-selection {
     background: #ff0;
     color: #000;
+}
+
+
+.comments {
+  margin-top: 50px;
+}
+.comments ul {
+  margin-top: 30px;
+  padding-left: 15px;
+}
+.comments ul li {
+  margin-bottom: 20px;
+}
+.comments input,
+.comments textarea {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  font-family: inherit;
+  font-size: inherit;
+  border: 1px solid lightgray;
+}
+.comments textarea {
+  resize: vertical;
+  height: 100px;
 }
 
 @media only screen and (max-width:480px) {
