--- a/src/static/style.css
+++ b/src/static/style.css
@@ -5,6 +5,7 @@
 body {
     line-height: 150%;
     margin-bottom: 100px;
+    font-family: serif;
 }
 
 main {
@@ -142,8 +143,14 @@ p.modified {
 
     }
 
+    ul.article-list li div {
+        display: block;
+        margin-top: 15px;
+      }
+
     ul.article-list a {
         display: block;
+        margin-top: 5px;
     }
 
     h1 {
@@ -156,6 +163,24 @@ p.modified {
 
     h3 {
         font-size: 160%;
+    }
+}
+
+@media (prefers-color-scheme: light) {
+    body {
+        background-color: white;
+        color: black;
+    }
+}
+
+@media (prefers-color-scheme: dark) {
+    body {
+        background-color: rgb(30, 30, 30);
+        color: white;
+    }
+
+    a {
+        color: white;
     }
 }
 
@@ -279,4 +304,4 @@ p.modified {
 
  .token.italic {
      font-style: italic;
- }
+}
