--- a/src/static/style.css
+++ b/src/static/style.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Source+Serif+Pro&display=swap');
-
 * {
   box-sizing: border-box;
 }
@@ -7,8 +5,7 @@
 body {
     line-height: 150%;
     margin-bottom: 100px;
-    font-family: 'Source Serif Pro', serif;
-    font-size: 16px;
+    font-family: serif;
 }
 
 main {
