--- a/templates/partials/navigation.twig
+++ b/templates/partials/navigation.twig
@@ -1,6 +1,6 @@
 <nav>
   <a href="/">Mitja Felicijan</a>
-  <a href="/curriculum-vitae.html">CV</a>
+  <a href="/curriculum-vitae">CV</a>
   <a href="https://twitter.com/mitjafelicijan" target="_blank" rel="noopener nofollow">Twitter</a>
   <a href="https://github.com/mitjafelicijan" target="_blank" rel="noopener nofollow">Github</a>
 </nav>
